[gd_scene load_steps=18 format=2]

[ext_resource path="res://World/Lobby/hostbutton.gd" type="Script" id=1]
[ext_resource path="res://World/Lobby/joinbutton.gd" type="Script" id=2]
[ext_resource path="res://World/Lobby/Connecting.gd" type="Script" id=3]
[ext_resource path="res://World/Lobby/Lobby.gd" type="Script" id=4]
[ext_resource path="res://Assets/PNGs/MenuUi/ButtonFocus.png" type="Texture" id=5]
[ext_resource path="res://Assets/PNGs/MenuUi/MenuImages/Menu.png" type="Texture" id=6]
[ext_resource path="res://Assets/PNGs/MenuUi/ButtonNorm.png" type="Texture" id=7]
[ext_resource path="res://Assets/PNGs/MenuUi/TextBox.png" type="Texture" id=9]
[ext_resource path="res://Font/AlloyInk-lgdWw.otf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=6]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 191, 49 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 2
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Font/AlloyInk-lgdWw.otf"

[sub_resource type="DynamicFont" id=8]
size = 50
outline_size = 3
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = SubResource( 7 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
MainMenu = "res://World/Menu/MainMenu/MainMenu.tscn"

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
flip_h = true

[node name="host" type="TouchScreenButton" parent="."]
position = Vector2( 128, 48 )
normal = ExtResource( 7 )
pressed = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="H" type="Label" parent="host"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.960784, 0.721569, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "HOST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IP" type="Label" parent="host"]
anchor_left = 1.28667
anchor_top = 0.373333
anchor_right = 3.62667
anchor_bottom = 0.693333
custom_colors/font_color = Color( 0.960784, 0.721569, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "IP:[ PRIVATE IP]"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="join" type="TouchScreenButton" parent="."]
position = Vector2( 128, 248 )
normal = ExtResource( 7 )
pressed = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="J" type="Label" parent="join"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.960784, 0.721569, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "JOIN"
align = 1
valign = 1

[node name="IP_Box" type="LineEdit" parent="join"]
anchor_left = 1.28
anchor_top = 0.266667
anchor_right = 3.62667
anchor_bottom = 0.666667
custom_colors/font_color = Color( 0.960784, 0.721569, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
align = 1
placeholder_text = "ENTER HOST'S IP ADDRESS"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InvalidIP" type="Label" parent="join"]
visible = false
anchor_left = 1.28
anchor_top = 0.693333
anchor_right = 4.26667
anchor_bottom = 0.96
margin_right = -6.10352e-05
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "PLEASE ENTER A VALID IP"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Back" type="TouchScreenButton" parent="."]
position = Vector2( 832, 456 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 7 )
pressed = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="B" type="Label" parent="Back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.960784, 0.721569, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "BACK"
align = 1
valign = 1

[node name="Connecting" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.415686, 0.784314, 0.886275, 1 )
script = ExtResource( 3 )

[node name="Rules" type="Label" parent="Connecting"]
anchor_left = 0.0439453
anchor_right = 0.946289
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.960784, 0.721569, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "RIDE ON THE BALL AND SLAM INTO YOUR RIVALS TO KNOCK THEM OFF!"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Connect" type="Label" parent="Connecting"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_colors/font_color = Color( 0.960784, 0.721569, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "CONNECTING..."
align = 2
valign = 2
uppercase = true

[node name="BeginTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="host" to="host" method="host"]
[connection signal="set_connect_type" from="host" to="Connecting" method="set_connect_type"]
[connection signal="pressed" from="join" to="join" method="pressed"]
[connection signal="set_connect_type" from="join" to="Connecting" method="set_connect_type"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="BeginTimer" to="." method="_on_BeginTimer_timeout"]
